Switched to MyMemory API for stable and correctly encoded translations